2005-12-04  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: improve code with some symbolic names.

2005-11-08  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_datums.c: Added OSGB36 transformation to list.

2005-07-06  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/Makefile.am: added .gsb installation logic to capture nz file.

	* pj_gridinfo.c: fixed debug format string per:
	http://bugzilla.remotesensing.org/show_bug.cgi?id=886

	* pj_utils.c: fixed precision of es encoding in pj_latlong_from_proj.
	  http://bugzilla.remotesensing.org/show_bug.cgi?id=881

2005-04-20  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_apply_gridshift.c: Fixed problem that was resulted in points
	after the first apparently succeeding to shift when a gridshift
	file wasn't found.  Bug 834.

2004-11-05  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: Fixed pj_geocentric_to_geodetic() to not try 
	and process HUGE_VAL values (those that have failed some previous 
	transform step).  Related to bug:
	  http://bugzilla.remotesensing.org/show_bug.cgi?id=642

2004-10-30  Frank Warmerdam  <warmerdam@pobox.com>

	* Improved --with-jni support in configure to allow specification
	of an include directory.  

Rel. 4.4.9 2004-10-29
-------------------------------------------------------------------------
	
2004-10-29  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing 4.4.9 release.

	* src/pj_gridinfo.c: Fixed reported information in ctable debug msg.

	* src/nad_cvt.c: Fixed problem with domai of tb.lam that caused
	failure of eastern hemisphere locations to transform with null
	grid (which is world sized).

2004-10-28  Frank Warmerdam  <warmerdam@pobox.com>

	* src/makefile.vc: Changed to build executables against a proj.dll
	by default.  

	* proj.def: added lots of methods, including some private ones used
	only by proj.c, and geod.c.

	* Added pj_get_*_ref() accessors for all the definition lists. 

	* Makefile.am: added jniwrap make support.
