@@ -1,3 +1,8 @@
+2006-01-12  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geocent.c: Make global variables static. Amoung other things
+	this avoids conflicts for apps that link in geotrans.
+
 2005-12-04  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/pj_transform.c: improve code with some symbolic names.
